# tiralabra23

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  readme.md  tasks.py
.github/workflows/: main.yml  pylint.yml
documentation/: kayttoohje.md  käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentaatio.md  toteutusdokumentti.md  vaatimusmäärittely.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
documentation/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_2.md
src/: main.py
src/algorithms/: arithmetic_operations.py  basic_operations.py  calculation.py  error_handling.py  operations.py  postfix_evaluator.py  scientific_calculator.py  shunting_yard.py
src/calculator/: scientific_calculator.py
src/calculator/algorithms/: arithmetic_operations.py  calculation.py  constants.py  error_handling.py  math_operations.py  postfix_evaluator.py  rpn_evaluator.py  shunting_yard.py
src/gui/: gui.py  gui_functions.py  memory.py  sci_cal_gui.py  scical_gui.ui
src/tests/: arithmetic_operations_test.py  basic_operations_test.py  calculation_test.py  math_operations_test.py  operations_test.py  postfix_evaluator_test.py  rpn_evaluator_test.py  scientific_calculator_test.py  shunting_yard_test.py
src/utils/: error_handling.py
