[tool.poetry]
name = "tieteellinen laskin"
version = "0.1.0"
description = "Helsingin yliopiston Aineopintojen harjoitustyö: Tietorakenteet ja algoritmit -kurssille tehty harjoitustyö."
authors = ["Teemu Bergman <teemu.bergman@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.15.10"
autopep8 = "^2.0.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
